# deepersystems-challenge

./: README.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile.python  app.py  main.py  parser.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/database/: database.py
backend/app/dtos/: user_dto.py
backend/app/models/: user.py
backend/app/repositories/: user_repository.py
backend/app/routes/: users.py
backend/app/services/: user_service.py
backend/config/: env.py
backend/models/: user.py  user_preferences.py
backend/scripts/: db.py  import_users.py  main.py  models.py  utils.py
frontend/: Dockerfile.node  package.json  pnpm-lock.yaml
frontend/src/: App.vue  main.js
frontend/src/constants/: constants.js
frontend/src/plugins/: axios.js
frontend/src/router/: index.js
frontend/src/views/: UserDetail.vue  UserList.vue
